[package]
name = "rust-crypto-stuff"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
getrandom = "0.3.3"
rand = "0.9.2"
thiserror = "2.0.12"

[dependencies.x25519]
package = "x25519-dalek"
version = "3.0.0-pre.0"
features = ["reusable_secrets", "static_secrets"]

[dependencies.ed25519]
package = "ed25519-dalek"
version = "3.0.0-pre.0"
features = ["rand_core"]
